# hm-typecheck

./: .gitignore  CHANGELOG.md  README.md  flake.nix  hm.cabal  testfun.sh
app/: BNFCSyntax.hs  Checker.hs  Constraints.hs  Desugar.hs  HMChecker.hs  MLChecker.hs  MLConstraints.hs  MLExpr.hs  MLSyntax.hs  MLTypes.hs  Main.hs  Prims.hs  Syntax.hs  TCM.hs  TestExpr.hs  TestSyntax.hs  Types.hs
cli/: AbsFun.hs  CheckFile.hs  Desugar.hs  Fun.cf  LexFun.hs  LexFun.x  ParFun.hs  ParFun.y  PrintFun.hs
examples/: abstractPairs.fun  badStmt.fun  complexArray.fun  complexDynArray.fun  dynArray.fun  emet.fun  foldand.fun  index.fun  memPairArray.fun  memoryPairs.fun  nestedInstances.fun  pairaa.fun  pragmas.fun  prog1  prog1.fun  prog1c.fun  prog2  prog4  prog4.fun  refref.fun  stmt.fun  store2.fun  storePair.fun  storen.fun  undefined.fun  whyAnf.fun
examples/attic/: 07comp.fun
examples/core/: 01pairs.core  02sum.core  03fun1.core  04fun2.core  05rgb.core  06main.core
examples/desugar/: arrays.fun  memoryPairs.fun  memoryVars.fun
examples/errors/: ambiguity.fun  badmutual.fun  coverage.fun  noInstance.fun  overlap.fun
examples/mona/: 01main.fun  02id.fun  02id2.fun  03option.fun  03single.fun  04pair.fun  05negList.fun  05triple.fun  06negPair.fun  07rgb.fun  08rgb2.fun  10ref.fun  11copy.fun  12copy2.fun  13copy3.fun  21simpleStmt.fun  22memoryVars.fun  24arrays.fun
examples/mutual/: forward.fun  oddeven.fun
fun/: CheckFile.hs  Desugar.hs  ParFun.y
lib/: stdlib.sol
src/: Checker.hs  Constraints.hs  Debug.hs  Desugar.hs  ISyntax.hs  NameSupply.hs  Prims.hs  Specialise.hs  Syntax.hs  TCM.hs  Types.hs
src/Common/: Debug.hs  LightYear.hs  NameSupply.hs  Pretty.hs  RIO.hs
src/Language/: Core.hs  Yul.hs
src/Language/Core/: Parser.hs
src/Language/Fun/: Checker.hs  Constraints.hs  EmitCore.hs  ISyntax.hs  Phase.hs  Prims.hs  Specialise.hs  Typecheck.hs  Types.hs
src/Language/Yul/: Parser.hs
test/: Desugar.hs  Syntax.hs  TestProgs.hs  TestUnit.hs
ttg/: Check.hs  Exp.hs  Main.hs  TCM.hs  Unify.hs
yule/: Locus.hs  Main.hs  README.md  TM.hs  Translate.hs
