cabal-version:      2.4
name:               hm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marcin Benke
maintainer:         marcin@benke.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    default-extensions: LambdaCase, PatternSynonyms, BlockArguments

    -- Modules included in this executable, other than Main.
    exposed-modules:
      Common.Debug
      Common.LightYear
      Common.Pretty
      Common.RIO
      ISyntax Checker Constraints Types NameSupply Prims TCM
      Specialise
      Language.Yul
      Language.Yul.Parser 
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions: 
    build-depends:    base ^>=4.16.4.0,
                      mtl >= 2.2,
                      containers >= 0.6,
                      megaparsec ^>= 9.6,
                      parser-combinators ^>= 1.3,
                      pretty ^>=  1.1,


    hs-source-dirs:   src
    -- default-language: Haskell2010
    default-language: GHC2021

executable fun
    main-is:          CheckFile.hs
    default-extensions: LambdaCase, PatternSynonyms, BlockArguments

    -- Modules included in this executable, other than Main.
    other-modules:
      AbsFun LexFun ParFun PrintFun
      Desugar

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: TemplateHaskell, QuasiQuotes
    build-depends:    base ^>=4.16.4.0,
                      mtl >= 2.2,
                      containers >= 0.6,
                      array >= 0.5,
                      hm

    build-tool-depends: alex:alex, happy:happy
    hs-source-dirs:   cli
    -- default-language: Haskell2010
    default-language: GHC2021


test-suite testprogs
    type:       exitcode-stdio-1.0
    main-is:          TestProgs.hs
    other-modules:    Desugar Syntax
    default-extensions: LambdaCase, PatternSynonyms

    build-depends:    base ^>=4.16.4.0,
                      mtl >= 2.2,
                      containers >= 0.6,
                      BNFC-meta >= 0.6,
                      hm


    hs-source-dirs:   test
    default-language: GHC2021

test-suite unit
    type:       exitcode-stdio-1.0
    main-is:          TestUnit.hs
    other-modules:    Desugar Syntax
    default-extensions: LambdaCase, PatternSynonyms

    build-depends:    base ^>=4.16.4.0,
                      mtl >= 2.2,
                      containers >= 0.6,
                      BNFC-meta >= 0.6,
                      hm


    hs-source-dirs:   test
    default-language: GHC2021
